--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [build]
-  command = "npm run build"
-  publish="public/"
-  base = "path-to-react-app"
+  command = ""
+  publish="dish"
+  base = ""
