--- a/package.json
+++ b/package.json
@@ -31,10 +31,14 @@
     "@hot-loader/react-dom": "^17.0.1",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@typescript-eslint/parser": "^4.10.0",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
+    "eslint-import-resolver-typescript": "^2.3.0",
+    "eslint-plugin-import": "^2.22.1",
     "file-loader": "^6.2.0",
+    "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^1.3.3",
     "prettier": "^2.2.1",
