--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,31 @@
 {
   "compilerOptions": {
-    "outDir": "./dist/",
-    "sourceMap": true,
-    "declaration": true,
-    "noUnusedLocals": true,
-    "strict": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "forceConsistentCasingInFileNames": true,
-    "noImplicitReturns": true,
-    "noImplicitAny": true,
-    "module": "CommonJS",
-    "lib": ["DOM", "ES2015.Promise", "ES5"],
-    "isolatedModules": true,
-    "resolveJsonModule": true,
-    "moduleResolution": "node",
-    "preserveConstEnums": true,
     "target": "es5",
-    "allowJs": true,
+    "module": "esnext",
+    "types": ["node"],
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "typeRoots": ["./src/@types", "./node_modules/@types"],
+    "lib": ["dom", "es2015", "ES5"],
     "jsx": "react",
-    "typeRoots": [
-      "custom_typings"
-    ]
+    "sourceMap": true,
+    "strict": true,
+    "resolveJsonModule": true,
+    "noUnusedLocals": true,
+    "noImplicitAny": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true,
+    "allowSyntheticDefaultImports": true,
+    "downlevelIteration": true,
+    "outDir": "./dist/",
+    "baseUrl": "/",
+    "allowJs": true,
+    "paths": {
+      "~/*":["src/*"],
+      "@turn/styled":["src/styled"]
+    }
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "build"]
+  "exclude": ["node_modules"]
 
 }
